# cpp-prom

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml
adapters/: CMakeLists.txt
adapters/prometheus_cpp/: CMakeLists.txt
adapters/prometheus_cpp/examples/: CMakeLists.txt  prometheus_backend.cpp
adapters/prometheus_cpp/include/prom/prometheus_cpp/: adapter.hpp
adapters/prometheus_cpp/src/: adapter.cpp
adapters/prometheus_cpp/tests/: CMakeLists.txt  test_prometheus_cpp.cpp  test_prometheus_cpp_integration.cpp
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  PrometheusCppDependencies.cmake  Sanitizers.cmake  prom-prometheus-cppConfig.cmake.in  promConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  all_metric_types.cpp  dimval_values.cpp  labeled.cpp  library_metrics.cpp  null_only.cpp  raw_values.cpp
include/prom/: adapter.hpp  composite_adapter.hpp  counter.hpp  dimval.hpp  error.hpp  fwd.hpp  gauge.hpp  global.hpp  histogram.hpp  info.hpp  labels.hpp  metric_base.hpp  null_adapter.hpp  prom.hpp  registry.hpp  scope.hpp  stateset.hpp  summary.hpp  unit.hpp  untyped.hpp  version.hpp.in
tests/: CMakeLists.txt  recording_adapter.hpp  test_composite_adapter.cpp  test_counter.cpp  test_dimval.cpp  test_enumeration.cpp  test_gauge.cpp  test_global.cpp  test_global_decoration.cpp  test_global_registry.cpp  test_histogram.cpp  test_info.cpp  test_labels.cpp  test_migration.cpp  test_null_adapter.cpp  test_registry.cpp  test_scope.cpp  test_standalone.cpp  test_stateset.cpp  test_summary.cpp  test_untyped.cpp
